--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <img id="memeImage" alt="Random Meme">
     <script>
         const memes = [
-            'https://previews.dropbox.com/p/thumb/ACHBVUuyi-o7-ekoGomhWojM-BpA79UUTZqz_aDwW0tIfIjryJLnKc2mMWhUZJgm0ebTsn4ZEimMZ5emEPWSM514j8ldjBArP655-Ttn4cbmN-czXQxFB6bb4W_NWB_6jqPa9UBP1qC4P1CG8Q5RB0XELR28t-theXY6a-u0BEI7nQFf4ZOmYfc5XwNXs4kIqlsuBUPvgH9SL2zquAD9dVzOe145DQGqTFC3l_B0-pAFmhawOOrSPRtStW92dXDUjJkXM5EtxWS6xmev9XPa7xQWuwiYxGd5SqfZRHQjEXBDTFgck3zWemB4aO0f4n3kiHZqh03pYvvvEQkATVRU7Dxu/p.jpeg'
+            'https://raw.githubusercontent.com/username/repository/branch/path/to/image1.jpg',
+            'https://raw.githubusercontent.com/username/repository/branch/path/to/image2.jpg',
+            // Add more image links as needed
         ];
 
         function getRandomMeme() {
