--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <img id="memeImage" alt="Random Meme">
+    <img id="memeImage" alt="AMARCHPO">
     <script>
         const memes = [
             'https://raw.githubusercontent.com/codingrepressor/memes/main/IMG_5888.jpeg',
